...

    val sheetState = rememberModalBottomSheetState(
        skipPartiallyExpanded = true
    )

    PDModalBottomSheet(
        modifier = modifier.testTag("NewRecordBottomSheet"),
        sheetState = sheetState,
        isVisible = isVisible,
        isFillMaxSize = false,
        onDismissRequest = {
            viewModel.clearState()
            onCloseBottomSheet()
...
                .height(360.dp),
            targetState = state.showProgressBar,
            label = ""
        ) { showProgressBar ->
            if (showProgressBar) {
                Box(
                    modifier = modifier.testTag("ProgressBar"),
                    contentAlignment = Alignment.Center
                ) {
                    PDCircularLoader()
                }
            } else {
                RecordContent(
...
